fix tutorial modal z-index (#154)
* fix tutorial modal z-index

* rev version

--- a/packages/components/src/TutorialModal/components/TutorialModalBody/TutorialModalBody.module.css
+++ b/packages/components/src/TutorialModal/components/TutorialModalBody/TutorialModalBody.module.css
@@ -49,6 +49,7 @@
   left: 2rem;
   display: flex;
   flex-direction: column;
+  z-index: var(--z-index-modal);
 }
 
 .header {
